# finance-agent

./: .gitignore  LICENSE  convert_to_gguf.ipynb  fine_tune.ipynb  finetune.ipynb  start.sh
data_pipeline/: benchmark.py  chunker.py  embed.py  generate_dataset.py  sec_parser.py  sec_scraper.py  validate_data.py
data_pipeline/dataset/: finance_chunks.jsonl  train_data.jsonl
data_pipeline/sec_cleaned_data/: AAPL_10K_2025-09-27_cleaned.txt  MSFT_10K_2025-06-30_cleaned.txt  TSLA_10K_2024-12-31_cleaned.txt
rust_interface/: Cargo.toml
rust_interface/src/: main.rs  model.rs  qdrant_client.rs
