[package]
name = "rust_interface"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.7"
candle-core = { version="0.9.1", features=["metal"] }
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
hf-hub = "0.4.3"
qdrant-client = "1.16.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokenizers = "0.22.2"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
